2007-02-06  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclNamesp.c:	Corrected broken implementation of the
	* tests/namespace.test:	TclMatchIsTrivial optimization on
	[namespace children $namespace $pattern].

2007-02-04  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tcl.m4: use gcc4's __attribute__((__visibility__("hidden"))) if
	available to define MODULE_SCOPE effective on all platforms.
	* unix/configure.in: add caching to -pipe and zoneinfo checks.
	* unix/configure: autoconf-2.59
	* unix/tclConfig.h.in: autoheader-2.59

2007-02-03  Joe Mistachkin  <joe@mistachkin.com>

	* win/rules.vc: Fix platform specific file copy macros for downlevel
	Windows.

2007-01-29  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclResult.c:	Added optimization case to TclTransferResult
	to cover common case where there's big savings over the fully general
	path.  Thanks to Peter MacDonald.  [Bug 1626518].

	* generic/tclLink.c:	Broken linked float logic corrected.  Thanks
	to Andy Goth [Bug 1602538].

	* doc/fcopy.n:	Typo fix. [Bug 1630627]

2007-01-28  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Tcl.xcodeproj/project.pbxproj:   extract build settings that
	* macosx/Tcl.xcodeproj/default.pbxuser:   were common to multiple
	* macosx/Tcl-Common.xcconfig (new file):  configurations into external
	* macosx/Tcl-Debug.xcconfig (new file):   xcconfig files; add extra
	* macosx/Tcl-Release.xcconfig (new file): configurations for building
	with SDKs and 64bit; convert legacy jam-based 'Tcl' target to native
	target with single script phase; correct syntax of build setting
	references to use $() throughout.

	* macosx/README: document new Tcl.xcodeproj configurations; other minor
	updates/corrections.

	* generic/tcl.h: update location of version numbers in macosx files.

	* macosx/Tcl.xcode/project.pbxproj: restore 'tcltest' target to working 
	* macosx/Tcl.xcode/default.pbxuser: order by replicating applicable
	changes to Tcl.xcodeproj since 2006-07-20.
